updated config file

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           pretty
 # Setup
 title:               James Hoskins
 tagline:             CLass Blog
-url:                 
+url:                 jphoskins55.github.io
 paginate:            2
 baseurl:             ""
 
